deploy/k8s/base/platform/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  labels:
    app: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: jinronara/coursematerials-eureka:0.1
          ports:
            - containerPort: 8761
          resources:
            requests:
              cpu: "100m"
              memory: "384Mi"
            limits:
              cpu: "1"
              memory: "768Mi"
          startupProbe:
            tcpSocket:
              port: 8761
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: 8761
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8761
            initialDelaySeconds: 60
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  selector:
    app: eureka
  ports:
    - port: 8761
      targetPort: 8761
